# evals-framework

./: .env.example  .gitignore  README.md  developer_walkthrough.md  evals_design_patterns.md  evals_framework_guide.md  evals_framework_laymans_guide.md  laymans_guide.md  pyproject.toml  step-by-step-guide-to-build-evals-framework.md
agent/: __init__.py  app.py  cli.py  config.py  memory.py  planner.py  safety.py
agent/tools/: __init__.py  base.py  calculator.py  knowledge_base.py  weather.py  web_search.py
evals/: __init__.py  cli.py  conftest.py  test_cases.py
evals/adapters/: __init__.py  example_agent.py
evals/configs/: ci.yaml  default.yaml  full.yaml
evals/core/: __init__.py  dataset.py  interfaces.py  reporter.py  runner.py
evals/datasets/e2e/: full_scenarios.jsonl
evals/datasets/integration/: advanced.jsonl  multi_tool.jsonl
evals/datasets/regression/: golden.jsonl
evals/datasets/unit/: safety.jsonl  tool_selection.jsonl
evals/scorers/: __init__.py  base.py  composite.py  deterministic.py  llm_judge.py
tests/: __init__.py  test_dataset.py  test_runner.py  test_scorers.py
